updated page controller