@@ -1,4 +1,4 @@
-package com.propertyapp.controller;
+package com.realestate.PropertyLanka.controller;
 
 import org.springframework.core.io.ClassPathResource;
 import org.springframework.core.io.Resource;
@@ -8,43 +8,22 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.io.IOException;
-import java.nio.file.Files;
+import java.nio.charset.StandardCharsets;
 
 /**
- * PageController — Member 3 (Sachindu)
- *
+ * PageController — Sachindu (Member 3)
  * Serves all HTML pages from src/main/resources/templates/
- * Each @GetMapping returns the corresponding HTML file.
  *
- * File structure:
- *   src/main/resources/
- *     templates/          ← HTML files served here
- *       index.html
- *       search.html
- *       properties.html
- *       property-detail.html
- *       add-property.html
- *       login.html
- *       register.html
- *       my-listings.html
- *       admin.html
- *     static/
- *       css/
- *         style.css       ← served at /css/style.css
- *       js/
- *         theme-toggle.js ← served at /js/theme-toggle.js
- *         particles.js    ← served at /js/particles.js
- *         search.js       ← served at /js/search.js
- *         admin.js        ← served at /js/admin.js
+ * Package FIXED: com.realestate.PropertyLanka.controller
+ * (was wrongly set to com.propertyapp.controller)
  */
 @RestController
 public class PageController {
 
-    // ── Helper — reads HTML file from templates folder ────
     private ResponseEntity<String> serveHtml(String filename) {
         try {
             Resource resource = new ClassPathResource("templates/" + filename);
-            String content = new String(Files.readAllBytes(resource.getFile().toPath()));
+            String content = new String(resource.getInputStream().readAllBytes(), StandardCharsets.UTF_8);
             return ResponseEntity.ok()
                     .contentType(MediaType.TEXT_HTML)
                     .body(content);
@@ -53,55 +32,30 @@ public class PageController {
         }
     }
 
-    // ── Page routes ───────────────────────────────────────
-
     @GetMapping("/")
-    public ResponseEntity<String> index() {
-        return serveHtml("index.html");
-    }
+    public ResponseEntity<String> index() { return serveHtml("index.html"); }
 
     @GetMapping("/index")
-    public ResponseEntity<String> indexAlt() {
-        return serveHtml("index.html");
-    }
+    public ResponseEntity<String> indexAlt() { return serveHtml("index.html"); }
 
     @GetMapping("/properties")
-    public ResponseEntity<String> properties() {
-        return serveHtml("properties.html");
-    }
+    public ResponseEntity<String> properties() { return serveHtml("properties.html"); }
 
     @GetMapping("/property")
-    public ResponseEntity<String> propertyDetail() {
-        return serveHtml("property-detail.html");
-    }
+    public ResponseEntity<String> propertyDetail() { return serveHtml("property-detail.html"); }
 
     @GetMapping("/search")
-    public ResponseEntity<String> search() {
-        return serveHtml("search.html");
-    }
+    public ResponseEntity<String> search() { return serveHtml("search.html"); }
 
     @GetMapping("/add-property")
-    public ResponseEntity<String> addProperty() {
-        return serveHtml("add-property.html");
-    }
+    public ResponseEntity<String> addProperty() { return serveHtml("add-property.html"); }
 
     @GetMapping("/my-listings")
-    public ResponseEntity<String> myListings() {
-        return serveHtml("my-listings.html");
-    }
+    public ResponseEntity<String> myListings() { return serveHtml("my-listings.html"); }
 
     @GetMapping("/admin")
-    public ResponseEntity<String> admin() {
-        return serveHtml("admin.html");
-    }
-
-    @GetMapping("/login")
-    public ResponseEntity<String> login() {
-        return serveHtml("login.html");
-    }
+    public ResponseEntity<String> admin() { return serveHtml("admin.html"); }
 
     @GetMapping("/register")
-    public ResponseEntity<String> register() {
-        return serveHtml("register.html");
-    }
+    public ResponseEntity<String> register() { return serveHtml("register.html"); }
 }
